--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Fleet Tracker</title>
+    <title>Nakshi Website</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Convergence">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -34,9 +34,9 @@
                 <div class="col-md-8 col-lg-8 col-xl-8 offset-xl-0">
                     <div class="carousel slide" data-ride="carousel" id="carousel-1">
                         <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active"><img class="w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
+                            <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/251-2515881_linpack-for-tableau-demo-clipart-hd-png-download.png" alt="Slide Image" style="height: 412px;"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/251-2515881_linpack-for-tableau-demo-clipart-hd-png-download.png" alt="Slide Image" style="height: 415px;"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/demo-png-3.png" alt="Slide Image" style="height: 409px;"></div>
                         </div>
                         <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button"
                                 data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a></div>
@@ -50,11 +50,11 @@
                 <div class="col-md-4 col-lg-4 col-xl-4" style="padding: 0px;font-family: Convergence, sans-serif;">
                     <div>
                         <ul class="nav nav-tabs nav-fill">
-                            <li class="nav-item"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-1" style="font-size: 20px;">Login</a></li>
-                            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-2" style="font-size: 20px;">Sign Up</a></li>
+                            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-1" style="font-size: 20px;">Login</a></li>
+                            <li class="nav-item"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-2" style="font-size: 20px;">Sign Up</a></li>
                         </ul>
                         <div class="tab-content">
-                            <div class="tab-pane active" role="tabpanel" id="tab-1">
+                            <div class="tab-pane" role="tabpanel" id="tab-1">
                                 <form style="padding: 38px;padding-top: 25px;padding-bottom: 25px;padding-left: 25px;padding-right: 25px;background-color: #ffffff;font-size: 20px;"><input class="form-control" type="email" placeholder="Email" style="margin: 0px;margin-bottom: 15px;"><input class="form-control" type="password" placeholder="Password" style="margin-bottom: 15px;"><div style="display:flex;justify-content:space-between">
     <div style="display:flex;justify-content:center;align-items:center;">
         <a href="#">Forgot Password?</a>
@@ -64,7 +64,7 @@
     </div>
 </div></form>
                             </div>
-                            <div class="tab-pane" role="tabpanel" id="tab-2">
+                            <div class="tab-pane active" role="tabpanel" id="tab-2">
                                 <form style="padding: 38px;padding-top: 25px;padding-bottom: 25px;padding-left: 25px;padding-right: 25px;background-color: #ffffff;"><input class="form-control" type="email" placeholder="Email" style="margin: 0px;margin-bottom: 15px;"><input class="form-control" type="password" placeholder="Password" style="margin-bottom: 15px;"><div style="display:flex;justify-content:space-between">
     <div>
         <input class="btn btn-success" type="submit" value="Signup">
@@ -103,15 +103,15 @@
                         <li style="font-size: 20px;">Tracking History</li>
                     </ul>
                 </div>
-                <div class="col-sm-6 col-md-6 text-right" style="background-color: #ffffff;"><img class="img-fluid" src="assets/img/images.jpeg" style="height: 330px;"></div>
+                <div class="col-sm-6 col-md-6 text-right" style="background-color: #ffffff;"><img class="img-fluid" src="assets/img/demo-png-8.png" style="height: 330px;"></div>
             </div>
         </div>
     </div>
     <div>
         <div class="container" style="padding-top: 25px;">
             <div class="row">
-                <div class="col-12 col-sm-7 col-md-6 text-left" style="background-color: #ffffff;"><img class="img-fluid" src="assets/img/images.jpeg" style="height: 330px;"></div>
-                <div class="col-sm-5 d-flex flex-column justify-content-center align-items-center" style="font-family: Convergence, sans-serif;background-color: #ffffff;">
+                <div class="col-12 col-sm-7 col-md-6 text-left" style="background-color: #ffffff;"><img class="img-fluid" src="assets/img/demo-png-8.png" style="height: 330px;"></div>
+                <div class="col-sm-5 col-md-6 col-lg-6 col-xl-6 d-flex flex-column justify-content-center align-items-center" style="font-family: Convergence, sans-serif;background-color: #ffffff;">
                     <h2 class="text-center">AI Based Insight</h2>
                     <ul style="font-size: 20px;">
                         <li>Red Flag an alcoholic driver</li>
@@ -132,13 +132,13 @@
                         <li>Flexible package to suit any need</li>
                     </ul>
                 </div>
-                <div class="col-sm-6 col-md-6 text-right" style="background-color: #ffffff;"><img class="img-fluid" src="assets/img/images.jpeg" style="height: 330px;"></div>
+                <div class="col-sm-6 col-md-6 text-right" style="background-color: #ffffff;"><img class="img-fluid" src="assets/img/demo-png-8.png" style="height: 330px;"></div>
             </div>
         </div>
     </div>
     <div class="container" style="padding-bottom: 15px;">
         <h1 class="text-center" style="padding-bottom: 14px;font-family: Convergence, sans-serif;">How it works?</h1>
-        <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item"></iframe></div>
+        <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xcJtL7QggTI" allowfullscreen=""></iframe></div>
     </div>
     <div class="container">
         <div class="card-group">
