--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>FleetTracker</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
+    <title>fleetTracking</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Convergence">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
+    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
+    <link rel="stylesheet" href="assets/css/Login-Box-En.css">
+    <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/Toggle-Switch-1.css">
+    <link rel="stylesheet" href="assets/css/Toggle-Switch.css">
 </head>
 
 <body style="background-color: #F5F8FA;">
@@ -139,10 +145,10 @@
     </div>
     <div class="container">
         <div class="card-group">
-            <div class="card">
-                <div class="card-body" style="font-family: Convergence, sans-serif;">
-                    <h4 class="text-center card-title" style="font-size: 30px;">Instant Tracking</h4>
-                    <ul style="font-size: 20px;">
+            <div class="card" style="margin: 10px;width: 260px;">
+                <div class="card-body" style="font-family: Convergence, sans-serif;width: 215px;">
+                    <h4 class="text-center card-title" style="font-size: 20px;width: 150px;margin-left: -39px;height: 22px;">Instant Tracking</h4>
+                    <ul style="font-size: 15px;margin-top: 28px;width: 115px;margin-left: -21px;">
                         <li>Item 1</li>
                         <li>Item 2</li>
                         <li>Item 3</li>
@@ -150,10 +156,10 @@
                     </ul>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-body" style="font-family: Convergence, sans-serif;">
-                    <h4 class="text-center card-title" style="font-size: 30px;">Tracking History</h4>
-                    <ul style="font-size: 20px;">
+            <div class="card" style="height: 260px;margin: 10px;width: 260px;">
+                <div class="card-body" style="font-family: Convergence, sans-serif;margin: 0px;width: 215px;">
+                    <h4 class="text-center card-title" style="font-size: 20px;width: 150px;margin-left: -39px;">Tracking History</h4>
+                    <ul style="font-size: 15px;width: 115px;margin-left: -20px;margin-top: 25px;margin-bottom: 0px;">
                         <li>Item 1</li>
                         <li>Item 2</li>
                         <li>Item 3</li>
@@ -161,16 +167,28 @@
                     </ul>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-body" style="font-family: Convergence, sans-serif;">
-                    <h4 class="text-center card-title" style="font-size: 30px;">Continuous Tracking</h4>
-                    <ul style="font-size: 20px;">
+            <div class="card" style="margin: 10px;height: 260px;margin-left: 10px;margin-right: 10px;width: 260px;">
+                <div class="card-body" style="font-family: Convergence, sans-serif;height: 260px;margin: 0px;width: 215px;">
+                    <h4 class="text-center card-title" style="font-size: 19px;width: 150px;margin: 0px;padding: 0px;margin-left: -42px;margin-right: 0px;">Continuous Tracking</h4>
+                    <ul style="font-size: 15px;width: 115px;margin-left: -20px;margin-top: 24px;">
+                        <li>Item 1</li>
+                        <li>Item 2</li>
+                        <li>Item 3</li>
+                        <li style="margin-left: 0px;">Item 4</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card" style="margin: 10px;height: 260px;width: 260px;">
+                <div class="card-body" style="height: 260px;margin: 0px;width: 215px;">
+                    <h4 class="card-title" style="height: 48px;font-size: 20px;width: 110px;margin-bottom: 28px;margin-left: 5px;">Fleet Groups</h4>
+                    <h6 class="text-muted card-subtitle mb-2"></h6>
+                    <ul style="font-size: 15px;margin-top: 24px;margin-left: -19px;width: 115px;">
                         <li>Item 1</li>
                         <li>Item 2</li>
                         <li>Item 3</li>
                         <li>Item 4</li>
                     </ul>
-                </div>
+                    <p class="card-text"></p><a class="card-link" href="#"></a><a class="card-link" href="#"></a></div>
             </div>
         </div>
     </div>
@@ -203,8 +221,8 @@
             </div>
         </footer>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
