onClick event added for card and link don't contain a line while hovering it

--- a/untitled.html
+++ b/untitled.html
@@ -15,6 +15,11 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/Toggle-Switch-1.css">
     <link rel="stylesheet" href="assets/css/Toggle-Switch.css">
+    <script>
+        function onClickOnTheTopScript() {
+            alert("You have clicked on the Card");
+        }
+    </script>
 </head>
 
 <body><a class="navbar-brand" href="#"></a>
@@ -69,169 +74,171 @@
                     <p style="margin-bottom: 0px;padding-left: 10px;padding-right: 10px;font-weight: 400;color: rgb(0,0,0);">Fleet Management</p>
                 </div>
                 <div class="login-box-seperator"></div>
-            </div><div style="display:flex;justify-content:space-between;align-items:center;">
-    <a href="#" style="display:flex;flex-direction:column;color:black;" onMouseOver="this.style.text-decoration=none"><i class="material-icons orange600" style="font-size:48px;">add</i>Add</a>
-    <a href="#" style="display:flex;flex-direction:column;color:black;"><i class="material-icons orange600" style="font-size:48px;">edit</i>Edit</a>
-    <a href="#" style="display:flex;flex-direction:column;color:black;"><i class="material-icons orange600" style="font-size:48px;">delete</i>Delete</a>
-    <a href="#" style="display:flex;flex-direction:column;color:black;"><i class="material-icons orange600" style="font-size:48px;">refresh</i>Refresh</a>
-</div><button class="btn btn-primary" type="button" style="margin-top: 11px;">Download Report</button></div>
+            </div>
+            <div class="sidebar-menu">
+                <a href="#"><i class="material-icons orange600" style="font-size:48px;">add</i>Add</a>
+                <a href="#"><i class="material-icons orange600" style="font-size:48px;">edit</i>Edit</a>
+                <a href="#"><i class="material-icons orange600" style="font-size:48px;">delete</i>Delete</a>
+                <a href="#"><i class="material-icons orange600" style="font-size:48px;">refresh</i>Refresh</a>
+            </div>
+            <button class="btn btn-primary" type="button" style="margin-top: 11px;">Download Report</button></div>
         <div class="col-md-8 col-lg-8 col-xl-9">
             <div class="d-flex justify-content-around align-items-center" style="margin-top: 25px;margin-bottom: 25px;"><label>Vehicles</label>
                 <form class="form-inline"><input class="form-control" type="search" style="width: 202px;"><button class="btn btn-primary" type="button" style="margin-left: 0px;">Search</button></form>
                 <div class="custom-control custom-checkbox custom-control-inline"><input type="checkbox" id="customCheckInline2" class="custom-control-input"><label class="custom-control-label" for="customCheckInline2">Track All</label></div>
             </div>
             <div class="d-flex justify-content-between flex-wrap" style="padding: 25px;">
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
                 </div>
-                <div class="card" style="width: 150px;margin-bottom: 25px;">
+                <div class="card" style="width: 150px;margin-bottom: 25px;" onclick="onClickOnTheTopScript()">
                     <div class="card-body">
                         <h4 class="card-title">GJ 05 EJ 6396</h4>
                     </div>
